Create separate classes for collections of operators and constants

--- a/ShuntingYardAlgorithm/ShuntingYardAlgorithm.csproj
+++ b/ShuntingYardAlgorithm/ShuntingYardAlgorithm.csproj
@@ -45,9 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constant.cs" />
+    <Compile Include="ConstantsCollection.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="ExpressionParser.cs" />
+    <Compile Include="IToken.cs" />
     <Compile Include="Operator.cs" />
+    <Compile Include="OperatorsCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
