Fix bug with incorrect operators placing in the stack

--- a/ShuntingYardAlgorithm/ShuntingYardAlgorithm.csproj
+++ b/ShuntingYardAlgorithm/ShuntingYardAlgorithm.csproj
@@ -47,8 +47,10 @@
     <Compile Include="Constant.cs" />
     <Compile Include="ConstantsCollection.cs" />
     <Compile Include="Exceptions.cs" />
+    <Compile Include="ExpressionEvaluator.cs" />
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="IToken.cs" />
+    <Compile Include="NumberToken.cs" />
     <Compile Include="Operator.cs" />
     <Compile Include="OperatorsCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
